test/files/neg/t3714-neg.check
t3714-neg.scala:17: error: value break in class BreakImpl cannot be accessed as a member of BreakImpl from object Test
 Access to protected value break not permitted because
 enclosing object Test is not a subclass of
 class BreakImpl where target is defined
    case b: BreakImpl => b.break
                           ^
t3714-neg.scala:25: error: value break in class BreakImpl cannot be accessed as a member of BreakImpl from object Test
 Access to protected value break not permitted because
 enclosing object Test is not a subclass of
 class BreakImpl where target is defined
    case b: BreakImpl => b.break
                           ^
two errors found
